--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,46 @@
-<link href='https://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/materialize.min.css" type="text/css" />
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <!-- <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+      <!-- <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css"  media="screen,projection"/> -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 
-<%= yield %>
+        <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300' rel='stylesheet' type='text/css'>
+
+      <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
+    </head>
+    <style media="screen">
+    html *
+      {
+       font-family: Source Sans Pro !important;
+      }
+
+      h2, h3, h4 {
+        font-weight: 200;
+      }
+
+      .action-buttons{
+        display: inline-block;
+      }
+
+      .delete{
+        float: right;
+      }
+
+      .new-one{
+        float:right;
+      }
+    </style>
+
+    <body>
+      <!--Import jQuery before materialize.js-->
+      <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
+      <!-- <script type="text/javascript" src="assets/js/materialize.min.js"></script> -->
+      <div class="container">
+        <%= yield %>
+      </div>
+    </body>
+  </html>
