--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -1,1 +1,28 @@
-<p>my name is <%= name %></p>
+
+<h5>All Your Posts</h5>   <a href="/todo/new" class="new-one waves-effect waves-light btn">New Todo</a>
+<ul>
+    <% @todo.each do |todo| %>
+
+    <li>
+      <h4><%= todo.title %></h4>
+    </li>
+    <li>
+      <p><%= todo.body %> </p>
+    </li>
+
+
+    <a href="todo/edit/<%= todo.id %>" class="btn action-buttons"> Edit</a>
+    
+      <form class="action-buttons delete" action="/todo/<%= todo.id %>" method="post">
+        <input type="hidden" name="_method" value="delete">
+        <button type="submit" class="btn red darken-4 ">Delete</button>
+      </form>
+
+
+
+
+
+<hr />
+  <% end %>
+  <br>
+</ul>
