--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,14 @@
   <!DOCTYPE html>
   <html>
     <head>
-      <!-- <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-      <!-- <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css"  media="screen,projection"/> -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 
-        <!-- Compiled and minified JavaScript -->
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 
         <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300' rel='stylesheet' type='text/css'>
 
-      <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <style media="screen">
     html *
